--- a/0-NICO/conf/ours_resnet18_multilayer4_bf0.02_noenv_pw5e5.yaml
+++ b/0-NICO/conf/ours_resnet18_multilayer4_bf0.02_noenv_pw5e5.yaml
@@ -1,9 +1,9 @@
 exp_name: nico_resvit18_multi_unshuffle_bf0.02_lr0.01
 net: resnet18_ours_cbam_multi
 dataset: NICO
-image_folder: /data2/wangtan/causal-invariant-attention/dataset/NICO/multi_classification
-cxt_dic_path: /data2/wangtan/causal-invariant-attention/dataset/NICO/label_file/Context_name2label.json
-class_dic_path: /data2/wangtan/causal-invariant-attention/dataset/NICO/label_file/Animal_name2label.json
+image_folder: data/NICO/multi_classification
+cxt_dic_path: data/Context_name2label.json
+class_dic_path: data/Animal_name2label.json
 training_opt:
   seed: 0
   classes: 10
@@ -33,7 +33,7 @@ variance_opt:
   mode: 'ours'
   erm_flag: True
   sp_flag: False
-  n_env: 4
+  n_env: 2
   env_type: 'auto-iter'
   split_renew: 40
   split_renew_iters: 20
