--- a/2-StandardDatasets/conf/ours_resnet18_multi2_mnist_pw5e4_noenv_iter.yaml
+++ b/2-StandardDatasets/conf/ours_resnet18_multi2_mnist_pw5e4_noenv_iter.yaml
@@ -4,8 +4,8 @@ dataset: MNIST
 #image_folder: /data2/wangtan/causal-invariant-attention/dataset/NICO/multi_classification
 #cxt_dic_path: /data2/wangtan/causal-invariant-attention/dataset/NICO/label_file/Context_name2label.json
 #class_dic_path: /data2/wangtan/causal-invariant-attention/dataset/NICO/label_file/Animal_name2label.json
-train_root: /home/prebenness/workspace/CaaM_representations/2-StandardDatasets/data/mnist_dumb_debug/train
-val_root: /home/prebenness/workspace/CaaM_representations/2-StandardDatasets/data/mnist_dumb_debug/val
+train_root: /home/prebenness/workspace/CaaM_representations/2-StandardDatasets/data/mnist_dumb/train
+val_root: /home/prebenness/workspace/CaaM_representations/2-StandardDatasets/data/mnist_dumb/val
 #imageneta_root: /disk2/wangtan/dataset/ImageNet/imagenet_a/imagenet-a
 training_opt:
   seed: 0
@@ -26,8 +26,8 @@ variance_opt:
   erm_flag: True
   sp_flag: False
   n_env: 5
-  env_type: 'random'
-  #env_type: 'auto-iter'
+  #env_type: 'random'
+  env_type: 'auto-iter'
   split_renew: 40
   split_renew_iters: 10
   from_scratch: False
