--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mkl-fft==1.3.1
 mkl-random==1.2.2
 mkl-service==2.4.0
 multidict==5.2.0
-numpy==1.23.1
+numpy
 oauthlib==3.2.0
 opencv-python==4.6.0.66
 packaging==21.3
